Corrected spacings

--- a/css/selected-quizz.css
+++ b/css/selected-quizz.css
@@ -208,7 +208,7 @@
 		align-items: center;
 		padding: 18px;
 		width: inherit;
-		margin-bottom: 20px;
+		margin-bottom: 10px;
 	}
 
 	.quizz .result .content{
